--- a/css/style.css
+++ b/css/style.css
@@ -3987,6 +3987,10 @@ body.boxed .body{
 	}
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+	/* custom styling */
+	.default-retina-logo{
+		display:block;
+	}
 }
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
